# chitchai

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build_release.sh  default_assistants.json  default_assistants.toml  package-lock.json  package.json  tailwind.config.js
assets/: tailwind.css
docs/: 404.html  CNAME  tailwind.css
docs/assets/dioxus/: Chitchai.js  Chitchai_bg.wasm  Tailwind CSS + Dioxus.js
docs/assets/dioxus/snippets/dioxus-interpreter-js-603636eeca72cf05/: inline0.js
src/: agents.rs  app.rs  chat.rs  lib.rs  main.rs  utils.rs
src/components/: chat.rs  chat_sidebar.rs  left_sidebar.rs  mod.rs  setting_sidebar.rs
src/components/chat/: message_card.rs  request_utils.rs
src/components/left_sidebar/: agent_profiles.rs  chat_history.rs  icons.rs
src/pages/: agents.rs  announcements.rs  announcements.toml  app.rs  mod.rs
src/prompt_engineer/: mod.rs  prompt_templates.rs
src/utils/: auth.rs  customization.rs  datetime.rs  markdown.rs  settings.rs  storage.rs
src/utils/storage/: conversion.rs  schema.rs
