[package]
name = "chitchai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "~0.4"
dioxus-web = "~0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
transprompt = { git = "https://github.com/ifsheldon/transprompt.git", default-features = false, features = ["wasm"] }
web-sys = { version = "0.3", features = ["Storage"] }
console_log = "1.0"
log = "0.4"
gloo-storage = "0.3"