[package]
name = "chitchai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "~0.5", features = ["router", "web"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
transprompt = { git = "https://github.com/ifsheldon/transprompt.git", version = "0.12.0-beta", default-features = false, branch = "dev" }
console_log = "1.0"
log = "0.4"
gloo-storage = "0.3"
futures = "0.3"
futures-util = "0.3"
async-std = "1.12"
chrono = { version = "0.4", features = ["serde", "unstable-locales"] }
readonly = "0.2"
toml = "0.8"
pulldown-cmark = { version = "0.10", default-features = false, features = ["html"] }

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "serde", # Enables serialization/deserialization of UUIDs
]

[profile.release]
opt-level = "z"
strip = true
lto = true
